# lightnovel-bookmark-backend

./: .env  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  light_novels.db  pyproject.toml
app/: main.py
app/api/: demo.py  novels.py  scraper.py  user_preferences.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  utils.py
app/db/: session.py
app/models/: novel.py  user_preferences.py
app/schemas/: novel.py  user_preferences.py
app/services/: demo_data.py  novel_service.py  novelupdates_cloudscraper.py  novelupdates_scraper.py  scraper_integration.py  user_preferences_service.py
